# AnuvadakAI-API

./: Dockerfile  README.md  app.py  full_summary.txt  pyproject.toml  requirements.txt  transcript_original.txt
src/: audio_downloader_and_processor.py  audio_transcriber.py  audio_translator.py  rag_pipeline.py  transcript_summarizer.py
