[project]
name = "anuvadakai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deep-translator>=1.11.4",
    "fastapi>=0.136.1",
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "fpdf2>=2.8.7",
    "groq>=0.37.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-mistralai>=1.1.4",
    "langchain-text-splitters>=1.1.2",
    "mistralai>=2.4.5",
    "numpy>=2.4.5",
    "openai-whisper>=20250625",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "reportlab>=4.5.1",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.0",
    "streamlit>=1.57.0",
    "streamlit-extras>=1.6.0",
    "tiktoken>=0.13.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.47.0",
    "watchdog>=6.0.0",
]
